<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/home_dest">

    <fragment
        android:id="@+id/home_dest"
        android:name="com.school.rs.astroevents.ui.fragments.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/main_fragment" >
        <action
            android:id="@+id/settings_action"
            app:destination="@id/settings_dest" />
        <action
            android:id="@+id/details_action"
            app:destination="@id/details_dest" />
    </fragment>
    <fragment
        android:id="@+id/settings_dest"
        android:name="com.school.rs.astroevents.ui.fragments.SettingsFragment"
        android:label="@string/settings_label" >
        <action
            android:id="@+id/about_action"
            app:destination="@id/about_dest" />
    </fragment>
    <fragment
        android:id="@+id/about_dest"
        android:name="com.school.rs.astroevents.ui.fragments.AboutFragment"
        android:label="@string/about_label" />
    <fragment
        android:id="@+id/details_dest"
        android:name="com.school.rs.astroevents.ui.fragments.ViewPagerFragment"
        android:label="Event Details" >
        <argument
            android:name="position"
            app:argType="integer" />
    </fragment>
</navigation>